implementing ModelFacade