@@ -1,50 +1,48 @@
 package com.models.profile;
 
 import java.util.ArrayList;
+import java.util.List;
+import java.util.Objects;
 
 // This class holds all accounts for the user and provides methods for adding, deleting, and returning each account.
 public class Profile {
-    private int activeAccount;
-    private ArrayList<Account> accounts;    // list of accounts
-    private int numberOfAccounts;       // number of active accounts
+    private final ArrayList<Account> accounts = new ArrayList<>(); // list of accounts
+    private Account activeAccount;
     private int maxNumberOfAccounts = 5;    // maximum number of accounts
     private String owner;
 
     // Constructor
-    public Profile() {
-        accounts = new ArrayList<Account>();
-        numberOfAccounts = 0;
-    }
-
     public Profile(ArrayList<Account> accounts) {
-        this.accounts = accounts;
-        this.numberOfAccounts = accounts.size();
+        if (accounts != null) {
+            this.accounts.addAll(accounts);
+            if (!this.accounts.isEmpty()) {
+                this.activeAccount = this.accounts.get(0);
+            }
+        }
     }
 
     // Purpose: To add an account to the manager. Returns true if successful, returns false if not.
     public boolean addAccount(Account account) {
-        if (numberOfAccounts < maxNumberOfAccounts) {
-            accounts.add(account);
-            numberOfAccounts++;
-            return true;
-        }
-        else {
-            System.out.println("Maximum number of accounts allowed is " + maxNumberOfAccounts);
+        Objects.requireNonNull(account, "account");
+        if (accounts.size() >= maxNumberOfAccounts) {
+            System.out.println("[Profile] Max number of accounts allowed is " + maxNumberOfAccounts);
             return false;
         }
+        accounts.add(account);
+        if (activeAccount == null) activeAccount = account; // default first
+        return true;
     }
 
     // Remove an account
     public boolean removeAccount(Account account) {
-        if (accounts.contains(account)) {
-            accounts.remove(account);
-            numberOfAccounts--;
-            return true;
-        }
-        else {
+        if (!accounts.remove(account)) {
             System.out.println("Account does not exist");
             return false;
         }
+        if (account == activeAccount) {
+            activeAccount = accounts.isEmpty() ? null : accounts.get(0);
+        }
+        return true;
     }
 
     // Get account by name
@@ -54,35 +52,35 @@ public class Profile {
                 return account;
             }
         }
-        System.out.println("Account does not exist");
+        System.out.println("[Profile] Account does not exist");
         return null;
     }
 
+    public List<Account> getAccounts() { return accounts; }
+
     public Account getFirstAccount() {
-        return accounts.getFirst();
+        return accounts.isEmpty() ? null : accounts.get(0);
     }
 
-    public Account getActiveAccount() { return accounts.get(activeAccount); }
+    public Account getActiveAccount() { return activeAccount; }
+
+    public void setActiveAccount(Account account) {
+        if (account != null && !accounts.contains(account)) {
+            throw new IllegalArgumentException("[Profile] Account does not exist");
+        }
+        this.activeAccount = account;
+    }
 
     // Get all names of accounts
-    public String[] getAccountNames() {
-        String[] names = new String[accounts.size()];
-        for (int i = 0; i < accounts.size(); i++) {
-            names[i] = accounts.get(i).getName();
-        }
-        return names;
+    public List<String> getAccountNames() {
+        return accounts.stream().map(Account::getName).toList();
     }
 
     public int getNumberOfAccounts() {
-        return numberOfAccounts;
+        return accounts.size();
     }
 
     public void setOwner(String owner) {
         this.owner = owner;
     }
-
-    public void addAccountToDb(Account account) {
-
-    }
-
 }
